2006-11-14  Andrew Cagney  <cagney@redhat.com>

	* frysk3381/reparent.c (main): Permit ECHILD waitpid status.

2006-11-07  Chris Moller  <moller@mollerware.com>

	* frysk3381/reparent.c: Revised test for frysk bug 3381 (RHEL bug
	210693) 
	* Makefile.am: Change frysk3381/reparent.c to PASS.  Also fixed
	typo: TESTS += frysk33811/reparent--an extra trailing '1' in
	frysk33811. 

2006-10-26  Nurdin Premji  <npremji@redhat.com>

	* frysk3228/LoggerParent.java (main): Fixed typo, second ab reference should be ac.

2006-10-24  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am: Change frysk3381/retrace.c to XFAIL, also fails on
	FC-5.

2006-10-23  Chris Moller  <moller@mollerware.com>

	* Makefile.am: Re-enabled.  It helps if I actually cvs add the stuff.

2006-10-23  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am: Disable below for now, retrace.c missing.

2006-10-23  Chris Moller  <moller@mollerware.com>

	* frysk3381/retrace.c: Added test for frysk bug 3381 (RHEL bug 210693).
	* Makefile.am: Included the test.

2006-10-11  Chris Moller  <moller@mollerware.com>

	* frysk3205/ptrace-test-3205.c: Renamed to:
	* frysk3205/ptrace-test.c:  To remove troublesome -3205 suffix.
	* Makefile.am (TESTS): Modified to reflect that change.

2006-10-11  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am (frysk3205_ptrace_test_SOURCES): Rename...
	(frysk3205_ptrace_test_3205_SOURCES): ...to the right name.

2006-10-04  Chris Moller  <moller@mollerware.com>

	* frysk3205/ptrace-test-3205.c: Added test to demonstrate that
	PTRACE_DETACH with an invalid signal not only fails, but doesn't
	do the detach either.

2006-09-27  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (TESTS): Add frysk3231/ptrace-test.
	* frysk3231/ptrace-test.c: Use fork, not clone.

2006-09-21  Chris Moller  <moller@mollerware.com>

	* frysk3231/ptrace-test.c: Simplified test to demonstrate
	PTRACE_DETACH failure under utrace-compatible ptrace.

2006-09-20  Chris Moller  <moller@mollerware.com>
